# dialect-map-schemas

./: .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: schemas.md
src/dialect_map_schemas/: __init__.py  errors.py
src/dialect_map_schemas/routes/: __init__.py  dialect_map.py  model.py  routes.py
src/dialect_map_schemas/schemas/: __init__.py  __utils.py  base.py  category.py  jargon.py  membership.py  metrics.py  paper.py  reference.py
src/dialect_map_schemas/schemas/combined/: __init__.py  base.py  paper.py
src/dialect_map_schemas/schemas/combined/validators/: __init__.py  records.py
src/dialect_map_schemas/schemas/standard/: __init__.py  base.py  category.py  jargon.py  membership.py  metrics.py  paper.py  reference.py
src/dialect_map_schemas/schemas/standard/validators/: regex.py
src/dialect_map_schemas/schemas/validators/: __init__.py  ranges.py
tests/: __init__.py
tests/schemas/: test_base.py  test_category.py  test_jargon.py  test_metrics.py  test_paper.py  test_reference.py
tests/schemas/combined/: __init__.py  test_paper.py
tests/schemas/standard/: test_base.py  test_category.py  test_jargon.py  test_membership.py  test_metrics.py  test_paper.py
