[metadata]
name = dialect-map-schemas
version = file: VERSION
description = Package containing the data schemas for the Dialect map
url = https://github.com/dialect-map/dialect-map-schemas
author = NYU DS3 Team
author_email = sinclert@nyu.edu
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7, <4.0
install_requires =
    marshmallow==3.14.0

[options.packages.find]
where = src

[options.extras_require]
lint =
    black==21.10b0
    mypy==0.910
test =
    pytest>=6.2.2
    pytest-cov>=2.10.0
all =
    dialect-map-schemas[lint]
    dialect-map-schemas[test]
    pre-commit==2.15.0
