[metadata]
name = dialect-map-schemas
version = file: VERSION
description = Package containing the data schemas for the Dialect map
url = https://github.com/dialect-map/dialect-map-schemas
author = NYU DS3 Team
author_email = sinclert@hotmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9, <4.0
install_requires =
    marshmallow==3.16.0

[options.packages.find]
where = src

[options.extras_require]
lint =
    black==22.3.0
    isort==5.10.1
    mypy==0.960
test =
    pytest==7.1.2
    pytest-cov==3.0.0
all =
    dialect-map-schemas[lint]
    dialect-map-schemas[test]
    pre-commit==2.19.0
