[metadata]
name = dialect-map-schemas
version = file: VERSION
description = Package containing the data schemas for the Dialect map
url = https://github.com/dialect-map/dialect-map-schemas
author = NYU DS3 Team
author_email = sinclert@hotmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11, <4.0
install_requires =
    marshmallow==3.19.0

[options.packages.find]
where = src

[options.extras_require]
lint =
    black==23.1.0
    isort==5.11.3
    mypy==1.3.0
test =
    pytest==7.2.0
    pytest-cov==4.0.0
all =
    dialect-map-schemas[lint]
    dialect-map-schemas[test]
    pre-commit==3.3.2
